--- a/assets/css/pages/our-journey.css
+++ b/assets/css/pages/our-journey.css
@@ -45,7 +45,7 @@
 
 #our-cars .car .car-about p {
     font-size: 17.5px;
-    padding: 50px 0px;
+    padding: 100px 0px;
 }
 
 @media only screen and (max-width:1150px) {
